IDP-316 Lint pass over the attribute projects.
https://issues.shibboleth.net/jira/browse/IDP-316

Fixes all the fixable (i.e. not architural) issues in the attribute projects, plus a
fewlow hanging fruit issues in other projects.